--- a/api/package.json
+++ b/api/package.json
@@ -33,7 +33,8 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/lodash": "^4.14.194",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.14.195",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.3",
     "concurrently": "^8.0.1",
